<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_6"
    android:theme="@style/HomeTheme">

    <TextView
        android:id="@+id/request_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed"
        android:text="USER SEARCH"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_title"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="username"
            android:background="#EFEEEE"
            android:hint=" Search"
            android:inputType="text"
            android:textColorHint="@color/text_hint" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginRight="10sp"
            android:backgroundTint="@color/orange"
            android:text="go"
            android:textAllCaps="false" />

    </LinearLayout>

    <ListView
        android:id="@+id/user_search_list"
        android:layout_width="wrap_content"
        android:layout_height="530dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/search_bar"
        android:layout_marginTop="5dp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/light_grey"
        android:divider="@color/light_grey"
        android:dividerHeight="1sp"
        android:padding="15dp"

        />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:text="select"
        android:textAllCaps="false"
        android:backgroundTint="@color/orange"/>



</RelativeLayout>