<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="0dp"
    android:paddingVertical="10dp">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="desc"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:background="@drawable/empty_profile_pic"
        />

    <TextView
        android:id="@+id/username_text_grid"
        android:text="name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/profile_pic"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:drawableTint="#313131"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:textColor="#202020" />

</RelativeLayout>