<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/HomeTheme"
    android:background="@drawable/app_background_5"
    tools:context=".ShowEventsForHabitActivity">
    <TextView
        android:id="@+id/show_events_log_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:textAllCaps="true"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/show_events_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_events_log_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="EVENT LOGS"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp" />
    <ListView
        android:id="@+id/show_events_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/light_grey"
        android:divider="@color/light_grey"
        android:dividerHeight="1sp"
        android:layout_below="@+id/show_events_title"
        android:layout_above="@+id/show_events_add_floating_button"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_events_add_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        app:backgroundTint="@color/baby_blue"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_events_edit_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:backgroundTint="@color/baby_blue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_events_delete_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/baby_blue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:ignore="SpeakableTextPresentCheck" />
</RelativeLayout>