<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/HomeTheme"
    android:background="@drawable/app_background_6">

    <EditText
        android:id="@+id/habit_header_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:inputType="none"
        android:background="@color/grey"
        android:text="ADD NEW HABBIT"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/habit_title_edittext"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="#30BCBCBC"
        android:ems="10"
        android:gravity="left|center"
        android:hint="  Habit Title"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_header_edittext"
        tools:ignoreMissingConstraints="true" />


    <EditText
        android:id="@+id/habit_reason_edittext"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="#30BCBCBC"
        android:ems="10"
        android:hint="  Reason"
        android:gravity="left"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_title_edittext" />


    <EditText
        android:id="@+id/habit_datetostart_editText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="#30BCBCBC"
        android:hint='  Press "Add Start Date"'
        android:gravity="left|center"
        android:textSize="18sp"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_reason_edittext" />

    <Button
        android:id="@+id/habit_addstartdate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="16dp"
        android:text="add start date"
        android:textAllCaps="false"
        android:backgroundTint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_datetostart_editText" />

    <TextView
        android:id="@+id/habit_weekdays_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="385dp"
        android:text="Choose days of the week:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_header_edittext" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_header_edittext">

        <com.google.android.material.chip.Chip
            android:id="@+id/habit_sunday_chip"
            style="@style/customChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:checkable="true"
            android:checked="false"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            android:text="S"
            android:textSize="14dp"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/habit_monday_chip"
            style="@style/customChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:checkable="true"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            android:text="M"
            android:textSize="14dp"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/habit_tuesday_chip"
            style="@style/customChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:checkable="true"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            android:text="T"
            android:textSize="14dp"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/habit_wednesday_chip"
            style="@style/customChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:checkable="true"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            android:text="W"
            android:textSize="14dp"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/habit_thursday_chip"
            style="@style/customChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:checkable="true"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            android:text="T"
            android:textSize="14dp"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/habit_friday_chip"
            style="@style/customChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:checkable="true"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            android:text="F"
            android:textSize="14dp"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/habit_saturday_chip"
            style="@style/customChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:checkable="true"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            android:text="S"
            android:textSize="14dp"/>
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/habit_finish_button"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="finish"
        android:textAllCaps="false"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/habit_publicVisibility_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="20dp"
        android:theme="@style/SwitchTheme"
        android:minHeight="48dp"
        android:text="Show Followers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>